rust/css-utils/src/snapshots/css_utils__tests__parse_css-2.snap
---
source: rust/css-utils/src/lib.rs
assertion_line: 231
expression: "parse_css(r#\"\n            @media (min-width: 640px) {\n                :root {\n                    font-size: 1rem;\n                    line-height: 1.5rem;\n                }\n            }\n            \"#)?.join(\"\\n\\n\")"
---
@media (min-width: 640px) {
  :root {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}
