rust/css-utils/src/snapshots/css_utils__tests__parse_css.snap
---
source: rust/css-utils/src/lib.rs
assertion_line: 216
expression: "parse_css(r#\"\n            .foo {\n                color: pink;\n                & .bar {\n                    color: red;\n                    & .baz .quax {\n                        color: orange;\n                    }\n                }\n            }\n            \"#)?.join(\"\\n\\n\")"
---
.foo {
  color: pink;
}

.foo .bar {
  color: red;
}

.foo .bar .baz .quax {
  color: orange;
}
