rust/css-utils/src/snapshots/css_utils__tests__parse_tailwind-2.snap
---
source: rust/css-utils/src/lib.rs
assertion_line: 251
expression: "parse_tailwind(r\"sm:text-md sm:text(md) sm:(text(md)) sm:(text-md)\")?.join(\"\\n\\n\")"
---
@media (min-width: 640px) {
  :root {
    font-size: 1rem;
    line-height: 1.5rem;
  }

  :root {
    font-size: 1rem;
    line-height: 1.5rem;
  }

  :root {
    font-size: 1rem;
    line-height: 1.5rem;
  }

  :root {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}
