rust/css-utils/src/snapshots/css_utils__tests__parse_tailwind.snap
---
source: rust/css-utils/src/lib.rs
assertion_line: 121
expression: "parse_tailwind(r\"text-md text-red-200 bg-red-100\")?.join(\"\\n\\n\")"
---
:root {
  color: #fecaca;
  background-color: #fee2e2;
  font-size: 1rem;
  line-height: 1.5rem;
}
