rust/css-utils/src/snapshots/css_utils__tests__parse_tailwind_variants-2.snap
---
source: rust/css-utils/src/lib.rs
assertion_line: 139
expression: "parse_tailwind(r\"sm:text-md md:text(lg) lg:(text(xl)) xl:(text-5xl)\")?.join(\"\\n\\n\")"
---
:root {
  font-size: 3rem;
  line-height: 100%;
}
