rust/css-utils/src/snapshots/css_utils__tests__parse_tailwind_variants.snap
---
source: rust/css-utils/src/lib.rs
assertion_line: 134
expression: "parse_tailwind(r\"sm:text-md sm:text(md) sm:(text(md)) sm:(text-md)\")?.join(\"\\n\\n\")"
---
:root {
  font-size: 1rem;
  line-height: 1.5rem;
}
